syntax = "proto3";

package rfakenews_service;

message InputFNS {
	string headline = 1;
	string body = 2;
}

message Score {
	string stance = 1;
}

service FNScore {
	rpc fn_score_calc(InputFNS) returns (Score) {}
}